Sigil v0.1.4 <ADD DATE>
    - HTML importing now defaults to a locale-aware codec if one is not detected in the HTML stream;
    previously the fallback codec was UTF-8; this change should improve importing of old HTML
    documents (issue #113)

Sigil v0.1.3 2009.09.02.
    - implemented a work-around for a bug in Qt causing documents with "us-ascii" encoding
    specified in the XML declaration to crash Sigil (issue #109)
    - resource path updating rewritten; should be more robust
    - fixed an issue where EPUB files from Google Books could not be opened (issue #106)
    - fixed regression for storing the folder from which the user last imported an image (issue #105)  
    - refactored HTML file import resource loading: should be a lot more robust now
    - fixed an issue with loading HTML files that reference the same images multiple times (issue #90)
    - implemented non-live View position synchronization; the Views are now synced
    by HTML element: moving the caret in one View will center the other View (upon switching)
    to the same HTML element that held the caret in the first View (issue #8)
    - newlines are now removed from TOC headings to avoid rendering problems in ADE (issue #96)
    - Sigil now creates a unique book identifier (if one is not provided by the user)
    using the UUID standard instead of a radnom sequence of characters and numbers;
    the old "SigilGEN" scheme is replaced with "UUID"
    - initial support for calibre interoperability (issue #94)
    - book updates from TOC editor are now faster and have a much smaller memory overhead
    - fixed issue with removing headings from TOC in TOC editor (issue #88, part 2 and issue #21);
    also made TOC editor updates to headings MUCH more robust
    - all headings are now by default included in TOC... heuristics for "guessing" which
    headings the users wants have been removed (issue #88, part 1)